# aleph-zero-login

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  Trunk.toml  config.yml  docker-compose.yml  example.env  flow.puml  index.html  rust-toolchain.toml
.github/workflows/: docker.yml  rust.yml
assets/: azns_router_metadata.json  do_not_use.pem
backend/: Cargo.toml
backend/assets/: azero_router_metadata.json
backend/src/: lib.rs  main.rs  signature.rs
backend/src/backend/: authorize_impl.rs  azero_id.rs  nft_authorize.rs
backend/src/backend/azero/: mod.rs
backend/src/backend/server/: mod.rs
frontend/: Cargo.toml  azero-testnet-metadata.scale  index.html
frontend/src/: lib.rs
frontend/src/frontend/: app.rs  main.rs  mod.rs  params.rs  signing.rs
frontend/src/frontend/components/: chain_select.rs  config_form.rs  copy_url_clipboard.rs  login_url.rs  mod.rs  navigation.rs  nft_image.rs  nft_input.rs  signing.rs  url_text.rs
frontend/src/frontend/pages/: configuration.rs  example.rs  home.rs  mod.rs
frontend/src/frontend/routes/: mod.rs
frontend/src/frontend/services/: mod.rs
frontend/static/: 400.html  index.html  index.scss  wasm_2048.css
src/: authorize_impl.rs  azero_id.rs  chain.rs  config.rs  lib.rs  main.rs  nft_authorize.rs
src/backend/: authorize_impl.rs  azero_id.rs  mod.rs  nft_authorize.rs
src/backend/azero/: router_contract.rs
src/backend/server/: mod.rs  routes.rs
src/backend/tzero/: mod.rs
src/frontend/: app.rs  chain_select.rs  configuration.rs  footer.rs  login_url.rs  main.rs  mod.rs  params.rs  signature.rs  signing.rs
src/frontend/components/: chain_select.rs  config_form.rs  copy_url_clipboard.rs  footer.rs  login_url.rs  mod.rs  navigation.rs  nft_image.rs  nft_input.rs  url_text.rs
src/frontend/pages/: configuration.rs  home.rs
src/frontend/routes/: home.rs  mod.rs
src/frontend/services/: mod.rs
src/server/: mod.rs
src/services/: mod.rs
src/tzero/: mod.rs  router_contract.rs
static/: 401.html  index.html  index.js  index.scss
