[package]
name = "aleph-zero-login"
version = "0.1.0"
edition = "2021"

[lib]
name = "aleph_zero_login"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["ssr"]

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"
required-features = ["hydration"]

[features]
ssr = ["yew/ssr", "subxt/native"]
hydration = ["yew/hydration", "subxt/web", "subxt/jsonrpsee"]

[dependencies]
anyhow = "1.0"
futures = "0.3"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subxt = { version = "0.31", default-features = false }
subxt-signer = { version = "0.31", features = ["subxt"] }
yew = { version = "0.21" }
yew-router = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7.3"
clap = { version = "4", features = ["derive"] }
pretty_env_logger = "0.4"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
web3-login = { git = "https://github.com/web3-login/web3-login" }


[dev-dependencies]
axum-test = "14.0.0"
tokio = { version = "1.0", features = ["full", "test-util"] }
