[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[features]
default = ["subxt/native", "subxt/jsonrpsee"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.77"
axum = "0.7.4"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4.33"
contract-transcode = "3.2.0"
futures = "0.3"
hex = "0.4.3"
log = "0.4"
rsa = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
serde_yaml = "0.9"
subxt = { version = "0.31", default-features = false }
subxt-signer = { version = "0.31", features = ["subxt"] }
urlencoding = "2.1.3"
openidconnect = { version = "3.4", features = ["jwk-alg"] }
pretty_env_logger = "0.4"
tokio = { version = "1.35", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "cors"] }
web3-login = { version = "0.4.9", git = "https://github.com/web3-login/web3-login", features = [
    "account",
] }
ink-wrapper-types = "0.4.0"
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
ink_primitives = "4.0.1"
aleph_client = "3.0.0"
sp-core = "27.0.0"
tracing = "0.1"
url = "2.5.0"
uuid = { version = "1.7", features = ["serde", "v4"] }

[dev-dependencies]
axum-test = "14.2.2"
ink = { version = "4.3.0", default-features = false }
tempfile = "3.9.0"
tokio = { version = "1.35", features = [
    "full",
    "test-util",
    "tracing",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3"
tracing-test = "0.2"
