[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"
required-features = ["hydration"]

[features]
default = ["hydration"]
hydration = []

[dependencies]
anyhow = "1.0"
futures = "0.3"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
serde_yaml = "0.9"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
yew = { version = "0.21", features = ["hydration"]}
yew-router = "0.18"
yew-hooks = "0.3.0"

js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }

[dev-dependencies]
