[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/frontend/main.rs"
required-features = ["hydration"]

[features]
default = ["hydration"]
hydration = []

[dependencies]
anyhow = "1.0"
futures = "0.3"
hex = "0.4.3"
log = { version = "0.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
serde_yaml = "0.9"
urlencoding = "2.1.3"
uuid = { version = "1.7.0", features = ["serde", "v4"] }

openidconnect = { version = "3.0", optional = true }
yew = { version = "0.21", features = ["hydration"] }
yew-router = "0.18"
yew-hooks = "0.3.0"
yew-nested-router = "0.6.1"
yew-oauth2 = { version = "0.10.1", features = ["openid"] }

js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }

rust-2048 = { git = "https://github.com/chriamue/wasm-2048" }

[dev-dependencies]
